# good-repo-poc

./: .pre-commit-config.yaml  .prettierignore  Containerfile  Dockerfile  README.md  cspell.json  main.py  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json  post-create.sh
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  dependency-review.yml  release.yml  scan.yml  super-linter.yml  test.yml  zizmor.yml
app/: main.py
test/: container-structure-test.yml
