[project]
name = "good-repo"
version = "0.0.1"
description = "Proof of Concept of a good repository"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask==3.1.1",
    "h11==0.14.0",
]

[dependency-groups]
dev = [
    "pre-commit==4.2.0",
    "ruff==0.11.11",
    "zizmor==1.8.0",
]
